@@ -1,6 +1,6 @@
 package org.goafabric.core.organization.controller;
 
-import org.goafabric.core.extensions.TenantContext;
+import org.goafabric.core.extensions.UserContext;
 import org.goafabric.core.organization.controller.dto.types.AddressUse;
 import org.goafabric.core.organization.controller.dto.types.ContactPointSystem;
 import org.junit.jupiter.api.Test;
@@ -18,7 +18,7 @@ class OrganizationControllerIT {
     private OrganizationController controller;
 
     @Test
-    public void getById() {
+    void getById() {
         setTenantId("0");
         var id = create();
         var organization = controller.getById(id);
@@ -27,14 +27,14 @@ class OrganizationControllerIT {
         assertThat(organization.name()).isEqualTo("Practice Dr. Monroe");
 
         assertThat(organization.address()).isNotNull().isNotEmpty();
-        assertThat(organization.address().get(0).city()).isEqualTo("Springfield");
-        assertThat(organization.address().get(0).street()).isEqualTo("Psych Street 0");
+        assertThat(organization.address().getFirst().city()).isEqualTo("Springfield");
+        assertThat(organization.address().getFirst().street()).isEqualTo("Psych Street 0");
 
         assertThat(organization.contactPoint()).isNotNull().isNotEmpty();
         assertThat(organization.contactPoint()).isNotNull().isNotEmpty();
-        assertThat(organization.contactPoint().get(0).use()).isEqualTo(AddressUse.HOME.getValue());
-        assertThat(organization.contactPoint().get(0).system()).isEqualTo(ContactPointSystem.PHONE.getValue());
-        assertThat(organization.contactPoint().get(0).value()).isEqualTo("555-222");
+        assertThat(organization.contactPoint().getFirst().use()).isEqualTo(AddressUse.HOME.getValue());
+        assertThat(organization.contactPoint().getFirst().system()).isEqualTo(ContactPointSystem.PHONE.getValue());
+        assertThat(organization.contactPoint().getFirst().value()).isEqualTo("555-222");
 
 
         delete(id);
@@ -42,7 +42,7 @@ class OrganizationControllerIT {
     }
 
     @Test
-    public void findByGivenName() {
+    void findByGivenName() {
         setTenantId("0");
         var id0 = create();
         assertThat(controller.findByName("Practice Dr. Monroe")).isNotNull().hasSize(1);
@@ -58,7 +58,7 @@ class OrganizationControllerIT {
     private String create() {
         return controller.save(
                 createOrganization("Practice Dr. Monroe",
-                        createAddress("Psych Street " + TenantContext.getTenantId()),
+                        createAddress("Psych Street " + UserContext.getTenantId()),
                         createContactPoint("555-222"))
         ).id();
     }
